# judge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  bors.toml  deny.toml  docker-compose.yml  rustfmt.toml
.github/workflows/: ci.yaml
ci/: config.yaml  publish-build.sh  publish-images.sh
invoker-client/: Cargo.toml
invoker-client/src/: lib.rs
judge-apis/: Cargo.toml
judge-apis/src/: judge_log.rs  lib.rs  live.rs  rest.rs
judgectl/: Cargo.toml
judgectl/src/: main.rs
problem-loader/: Cargo.toml
problem-loader/src/: lib.rs  registry.rs
processor/: Cargo.toml
processor/src/: compile.rs  exec_test.rs  fake.rs  lib.rs  request_builder.rs  transform_judge_log.rs
processor/src/exec_test/: checker_proto.rs
setup/: Dockerfile  Readme.md  main.sh
setup-data/: .gitignore  Readme.md  load.sh
src/: main.rs  rest.rs
toolchain-loader/: Cargo.toml
toolchain-loader/src/: lib.rs
valuer-client/: Cargo.toml
valuer-client/src/: child.rs  lib.rs
