[package]
name = "problem-loader"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"


[dependencies]
pom = { git = "https://github.com/jjs-dev/pps", branch = "master" }
anyhow = "1.0.40"
serde_json = "1.0.64"
async-trait = "0.1.50"
tokio = { version = "1.16.1", features = ["fs", "sync"] }
fs_extra = "1.2.0"
mongodb = { git = "https://github.com/mongodb/mongo-rust-driver" }
url = "2.2.1"
bson = "2.0.0-beta"
flate2 = "1.0.20"
tar = "0.4.33"
serde = "1.0.125"
tracing = "0.1.25"
