[package]
name = "valuer-client"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
nix = "0.20.0"
serde = "1.0.125"
serde_json = "1.0.64"
tokio = { version = "1.5.0", features = ["process", "io-util", "time"] }
tracing = "0.1.26"
valuer-api = { git = "https://github.com/jjs-dev/pps", branch = "master" }
