[package]
name = "valuer-client"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
serde = "1.0.125"
serde_json = "1.0.64"
tokio = { version = "1.8.4", features = ["process", "io-util", "time"] }
tracing = "0.1.26"
valuer-api = { git = "https://github.com/jjs-dev/pps", branch = "master" }
